# stackable_krustlet

./: Cargo.toml
crates/kubelet/src/: kubelet.rs  lib.rs
crates/kubelet/src/bootstrapping/: mod.rs
crates/kubelet/src/node/: mod.rs
crates/kubelet/src/pod/: queue.rs
crates/kubelet/src/provider/: mod.rs
crates/stackable-provider/: Cargo.toml
crates/stackable-provider/crds/: repository.yaml
crates/stackable-provider/src/: error.rs  lib.rs  states.rs
crates/stackable-provider/src/repository/: mod.rs  package.rs  repository.rs  stackablerepository.rs
crates/stackable-provider/src/states/: create_config.rs  create_service.rs  download_package.rs  download_package_backoff.rs  failed.rs  install_package.rs  running.rs  setup_failed.rs  starting.rs  stopped.rs  stopping.rs  terminated.rs  waiting_config.rs
crates/wascc-provider/src/: lib.rs
crates/wasi-provider/src/: lib.rs
demos/stackable/hello-world/: hello-world-missing-configmap.yaml  hello-world.yaml
src/: krustlet-stackable.rs
