[package]
name = "stackable-provider"
version = "0.1.0"
authors = ["Sönke Liebau <soenke.liebau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
url = "2.2"
async-trait = "0.1"
backtrace = "0.3"
kube = { version= "0.42", default-features = false }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
kubelet = { path = "../kubelet", version = "0.5", default-features = false, features= ["derive"] }
tokio = { version = "0.2", features = ["fs", "stream", "macros", "io-util", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
k8s-openapi = { version = "0.9", default-features = false, features = ["v1_18"] }
thiserror = "1.0"
kube-derive = "0.43"
reqwest = "0.10"
oci-distribution = { path = "../oci-distribution", version = "0.4", default-features = false }
flate2 = "1.0"
tar = "0.4"
